tested and fixed issues;